--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 </style>
 <body>
-    <img src="https://commons.wikimedia.org/wiki/File:Under-Construction-Bulldozer.gif" alt="under construction gif" width="100%">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Under-Construction-Bulldozer.gif" alt="bulldozer gif" width="100%">
     <h1 id="elem">Please be patient, this project website is under construction!</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Under-construction5.gif" alt="under construction gif" width="100%">
 </body>
